gcc/testsuite/gdc.test/compilable/test21668.d
// https://issues.dlang.org/show_bug.cgi?id=21668

struct Opaque;

void byPtr(Opaque*) {}
void byRef(ref Opaque) {} // Fails
void bySlice(Opaque[]) {}
